crates/rsub-api/tests/snapshots/snapshots__playlists_empty_json.snap
---
source: crates/rsub-api/tests/snapshots.rs
expression: json
---
{
  "subsonic-response": {
    "openSubsonic": true,
    "playlists": {
      "playlist": []
    },
    "serverVersion": "[version]",
    "status": "ok",
    "type": "rs-subsonic",
    "version": "1.16.1"
  }
}
